[gd_scene load_steps=3 format=2]

[ext_resource path="res://Music and Sounds/Effects/Effects.gd" type="Script" id=1]
[ext_resource path="res://Music and Sounds/Effects/EffectsPlayer.gd" type="Script" id=2]

[node name="EffectPlayer" type="Node"]
script = ExtResource( 2 )

[node name="Effects" type="AudioStreamPlayer" parent="."]
script = ExtResource( 1 )

[node name="Effects2" type="AudioStreamPlayer" parent="."]
script = ExtResource( 1 )

[node name="Effects3" type="AudioStreamPlayer" parent="."]
script = ExtResource( 1 )

[node name="Effects4" type="AudioStreamPlayer" parent="."]
script = ExtResource( 1 )

[node name="Effects5" type="AudioStreamPlayer" parent="."]
script = ExtResource( 1 )
[connection signal="finished" from="Effects" to="Effects" method="_on_Effects_finished"]
[connection signal="finished" from="Effects2" to="Effects2" method="_on_Effects2_finished"]
[connection signal="finished" from="Effects3" to="Effects3" method="_on_Effects3_finished"]
[connection signal="finished" from="Effects4" to="Effects4" method="_on_Effects4_finished"]
[connection signal="finished" from="Effects5" to="Effects5" method="_on_Effects5_finished"]
